Todos os exercícios

--- a/Exercícios/Exercício parte 6 - Tabuada/index.html
+++ b/Exercícios/Exercício parte 6 - Tabuada/index.html
@@ -27,7 +27,7 @@
         </div>
     </section>
     <footer>
-        <p>&copy; Curso em vídeo 2019.</p>
+        <p>&copy; Vinícius</p>
     </footer>
 </body>
 
