--- a/Exercícios/Exercício parte 7 e 8 - Analisando Numeros/index.html
+++ b/Exercícios/Exercício parte 7 e 8 - Analisando Numeros/index.html
@@ -11,11 +11,11 @@
 
 <body>
     <header>
-        <h1>Array - Numeros de 1 a 100</h1>
+        <h1>Array - Analisando números</h1>
     </header>
     <section>
         <div>
-            <p>Numero entre 1 e 100: <input type="number" id="txtn"> <input type="button" value="Adicionar" id="add">
+            <p>Números entre 1 e 100: <input type="number" id="txtn"> <input type="button" value="Adicionar" id="add">
             </p>
         </div>
         <div>
@@ -26,11 +26,11 @@
             <input id="finalizar" type="button" value="Finalizar">
         </div>
         <div id="res">
-            <p>dasd</p>
+            <p></p>
         </div>
     </section>
     <footer>
-        <p>&copy; Curso em vídeo 2019.</p>
+        <p>&copy; Vinícius.</p>
     </footer>
 </body>
 
