--- a/Exercícios/Exercício parte 2 - Hora do dia/index.html
+++ b/Exercícios/Exercício parte 2 - Hora do dia/index.html
@@ -10,7 +10,7 @@
 
 </head>
 
-<body onload="mudar()">
+<body>
     <div class="container">
         <header>
             <h1>Hora</h1>
@@ -25,7 +25,7 @@
             </div>
         </main>
         <footer id="copyright">
-           <!-- <p>&copy; Vinícius. </p>--> 
+            <!-- <p>&copy; Vinícius. </p>-->
         </footer>
     </div>
 </body>
